# vidro-rust

./: .gitignore  Cargo.toml  README.md
src/: bit_vidro.rs  bitboard.rs  bitboard_console.rs  checkmate_search.rs  eval.rs  eval_value.rs  main.rs  pre_train.rs  random_state_generator.rs  search.rs  select_move_softmax.rs  self_match.rs  snapshot.rs  snapshot_features.rs  util.rs
