[package]
name = "vidro-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
lru = "0.8"
lazy_static = "1.4"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"   # もっとも強力だがコンパイルは重い
codegen-units = 1
panic = "abort"

target-cpu = "native"

[build]
rustflags = ["-C", "target-cpu=native"]
